2005-03-12  Dan Williams <dcbw@redhat.com>

	Patch from Nathaniel McCallum:
	* src/NetworkManagerDevice.c
		- (nm_device_set_wireless_config): Increase timeout for some devices

2005-03-04  Dan Williams <dcbw@redhat.com>

	Patch from Peter Jones:
	- Make stuff work with gcc 4.0

2005-02-28  Dan Williams <dcbw@redhat.com>

	Tag STABLE_0_3_4_RELEASE

	* configure.in:
		- Bump version to 0.3.4

2005-02-27  Jim Huang  <jserv@kaffe.org>

	* configure.in: Added "zh_TW" (Traditional Chinese) to ALL_LINGUAS.

2005-02-27  Dan Williams  <dcbw@redhat.com>

	Patch from Bill Moss:
	* panel-applet/NMWirelessAppletDbus.c
		- Make sure strength for current access point is up-to-date when we
			update the gui data model

2005-02-27  Alessio Frusciante  <algol@firenze.linux.it>

	* configure.in: Added "it" (Italian) to ALL_LINGUAS.

2005-02-27  Dan Williams  <dcbw@redhat.com>

	* src/backends/NetworkManagerRedHat.c
		- (nm_system_init): Kill any dhclient processes lying around as well
			as stopping 'nifd' if its already been started.  NetworkManager
			subsumes the functions of nifd (kicking mDNSResponder, autoip)

2005-02-27  Dan Williams  <dcbw@redhat.com>

	* panel-applet/NMWirelessApplet.c
		- (nmwa_destroy): Really mean to destroy GUI data model first, then
			dbus data model, not the GUI data model twice.

2005-02-27  Dan Williams  <dcbw@redhat.com>

	* panel-applet/NMWirelessApplet.[ch]
	  panel-applet/NMWirelessAppletDbus.[ch]
		- Move to incremental network updates.  Instead of blowing away our list
			of devices every time we get a signal from NetworkManager, we now
			incrementally add/remove networks when NetworkManager notifies us that
			a new network has appeared or disappered.  Strength updates now happen
			on-the-fly for each access point as well.  There are now two copies of
			data from NetworkManager: one for the dbus side, and one for the gui side.
			When the dbus side data is modified, it is copied over to the gui side